{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Touch",
            "id": "01bf0b0a-e5ca-4db2-9774-549dcf5d61f5",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "8b3ab323-2b78-4c66-b772-139833af7cb9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "335d486b-83c1-4a69-beb3-265462bd2ec2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ffef8d1f-503d-44d7-9c77-2a9c5a962ff5",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55927e1e-2d71-4655-bdf3-12fffd5b20bc",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "id": "7f48c0e9-4623-485f-80b0-f43bf9a37b03",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "2bdbda13-34d9-4044-aa96-4d32fe4f95b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d81baf6e-c9e5-4915-bc0e-5ec38ecb031f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}